--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/letyshops-logo-800x530.jpg" alt="" title="">
+                        <a href="https://gohere.pl/p/6EKf/cg2O/YBv8"><img src="assets/images/letyshops-logo-800x530.jpg" alt="" title=""></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>LetyShops</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Wtyczka LetyShops</h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Zwrócimy Ci część hajsu za zakupy w Internecie. Kupujesz, oszczędzasz, wypłacasz. Cashback?</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank"><span class="socicon socicon-younow mbr-iconfont mbr-iconfont-btn"></span>Dołącz już dziś&nbsp;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://gohere.pl/p/6EKf/cg2O/YBv8" class="btn item-btn btn-black display-7" target="_blank"><span class="socicon socicon-younow mbr-iconfont mbr-iconfont-btn"></span>Dołącz już dziś&nbsp;</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-4">
@@ -189,7 +189,7 @@
                 </div>
             </div>
             <div class="col-lg-3 offset-lg-1 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NQM3SOS8iKl+nGBcgJZqjAgkofZEuMB0UWRLneTejs+zo+nuCHXZBuc0oGKHJrRvjS0KvCkHX7W5RORvMh3HPPVvzMqxp4Z4LbplAvlqrrpHbhv9eiHMmDxoM7Sz1JHc">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zRVAXc0zWcRH3w3iDKZ17yJr8Srmic7YebEqpy1IHLaki2713ObR+T2xlhJc0WBnXQQqzDsZfjvaB9czHNDnb9za/YO8Fg/Y/WAGhQ7NdvIPCNXAgsillCl+EXeqJzsH">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             the form!</div>
@@ -233,7 +233,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/i" style="color:#aaa;">Built with Mobirise</a> web software</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/v" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise - <a href="https://mobirise.site/m" style="color:#aaa;">See it</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
